# models/product.js
@@ -18,7 +18,13 @@ const productSchema = new mongoose.Schema({
     },
     preview: {
         type: String,
-        required: false
+        required: false,
+        default:null
+    },
+    description: {
+        type:String,
+        required:false,
+        default:null
     },
     profiles: {
         type: mongoose.Schema.Types.ObjectId,
@@ -46,6 +52,8 @@ Product.createProduct = async function(auth, data) {
                         let ay = {
                             _id: res._id,
                             name: res.name,
+                            preview: res.preview,
+                            description: res.description,
                             price: res.price,
                             stock: res.stock,
                             profiles: res.profiles
@@ -66,7 +74,7 @@ Product.createProduct = async function(auth, data) {
 
 Product.getAll = async function(data) {
     return new Promise(async function(resolve,reject) {
-        let all = await Product.find(data).select(['_id','name','price','stock','preview'])
+        let all = await Product.find(data).select(['_id','name','price','stock','preview', 'profiles'])
         if(!all) {
             reject([404, 'Product not found!'])
         }
@@ -76,9 +84,24 @@ Product.getAll = async function(data) {
     })
 }
 
+Product.search = async function(data) {
+    return new Promise(async function(resolve,reject) {
+        try {
+            let product = await Product.find(data)
+            if(!product) {
+                reject([404, 'Product not found!'])
+            }
+            else return resolve([200, product, 'Here is the list!'])
+        }
+        catch(err){
+            reject([404, 'Product not found!'])
+        }
+    })
+}
+
 Product.detail = async function(id) {
     return new Promise(async function(resolve,reject) {
-        let valid = await Product.findById(id).select(['_id','name','price','stock','preview'])
+        let valid = await Product.findById(id).select(['_id','name','price','stock','preview','profiles', 'description'])
         if(!valid) {
             reject([404, 'Product not found!'])
         }
@@ -102,6 +125,8 @@ Product.editProduct = async function(auth, id, data) {
                 let hasil = {
                     _id: update._id,
                     name: update.name,
+                    preview: update.preview,
+                    description: update.description,
                     price: update.price,
                     stock: update.stock,
                     profiles: update.profiles
