# routes/profileRouter.js
@@ -3,7 +3,7 @@ const profileRouter = require('../controllers/profileController.js');
 const auth = require('../helper/auth.js');
 
 router.post('/create', auth, profileRouter.create);
-router.put('/update/:id', auth, profileRouter.update);
-router.get('/show/:id', auth, profileRouter.show);
+router.put('/update', auth, profileRouter.update);
+router.get('/show/:id', profileRouter.show);
 
 module.exports = router;
