# swagger.json
@@ -228,7 +228,7 @@
               "$ref":"#/definitions/BadRequest"
             }
           },
-          "x-400": {
+          "409": {
             "description": "Profile already created!",
             "schema": {
               "$ref":"#/definitions/ProfileAlready"
@@ -254,7 +254,7 @@
         ]
       }
     },
-    "/profile/update/{id}": {
+    "/profile/update": {
       "put": {
         "tags": [
           "Profile Operation"
@@ -268,13 +268,6 @@
           "application/json"
         ],
         "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "description": "Insert profile id here!",
-            "required": true,
-            "type": "string"
-          },
           {
             "in": "body",
             "name": "body",
@@ -302,6 +295,12 @@
             "description": "Failed to update profile",
             "schema": {
               "$ref":"#/definitions/FailedProfileUpdate"
+            }
+          },
+          "x-422":{
+            "description":"Unexpected error! Please create profile first!",
+            "schema":{
+              "$ref":"#/definitions/CreateProfileFirst"
             }
           },
           "400": {
@@ -372,25 +371,8 @@
             "schema": {
               "$ref":"#/definitions/ProfileNotFound"
             }
-          },
-          "401": {
-            "description": "No token!",
-            "schema": {
-              "$ref":"#/definitions/NoToken"
-            }
-          },
-          "403": {
-            "description": "Invalid token!",
-            "schema": {
-              "$ref":"#/definitions/InvalidToken"
-            }
           }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
+        }
       }
     },
     "/product/create": {
@@ -521,6 +503,52 @@
           "application/json"
         ],
         "parameters":[
+        ],
+        "responses": {
+          "200": {
+            "description":"Here is the list!",
+            "schema": {
+              "$ref":"#/definitions/AllProduct"
+            }
+          },
+          "404": {
+            "description":"Product not found!",
+            "schema": {
+              "$ref":"#/definitions/NoProduct"
+            }
+          }
+        }
+      }
+    },
+    "/product/search": {
+      "get": {
+        "tags":[
+          "Product Operation"
+        ],
+        "summary":"Search Product",
+        "description":"Search Merchant's product",
+        "consumes":[
+          "application/json"
+        ],
+        "produces":[
+          "application/json"
+        ],
+        "parameters":[
+          {
+            "in": "query",
+            "name": "name",
+            "type":"string"
+          },
+          {
+            "in": "query",
+            "name": "price",
+            "type":"number"
+          },
+          {
+            "in": "query",
+            "name": "stock",
+            "type":"number"
+          }
         ],
         "responses": {
           "200": {
@@ -814,6 +842,73 @@
               "$ref":"#/definitions/FailedDeleteOrder"
             }
           },
+          "x-403": {
+            "description":"This is not your order!",
+            "schema":{
+              "$ref":"#/definitions/NotOrderOwner"
+            }
+          },
+          "401": {
+            "description": "No token!",
+            "schema": {
+              "$ref":"#/definitions/NoToken"
+            }
+          },
+          "403": {
+            "description": "Invalid token!",
+            "schema": {
+              "$ref":"#/definitions/InvalidToken"
+            }
+          }
+        },
+        "security": [
+          {
+            "Authorization": []
+          }
+        ]
+      }
+    },
+    "/order/detail/{id}": {
+      "post": {
+        "tags":[
+          "Order Operation"
+        ],
+        "summary":"Get Order Detail",
+        "description":"Get order detail",
+        "consumes":[
+          "application/json"
+        ],
+        "produces":[
+          "application/json"
+        ],
+        "parameters":[
+          {
+            "in":"path",
+            "name":"id",
+            "description":"Insert order id here!",
+            "required":true,
+            "type":"string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description":"Here is the detail!",
+            "schema": {
+              "$ref":"#/definitions/GetOrder"
+            }
+          },
+          "x-403": {
+            "description":"This is not your order!!",
+            "schema":{
+              "$ref":"#/definitions/NotOrderOwner"
+            }
+          },
+          "422": {
+            "description":"Unexpected error! Failed to get order!",
+            "schema": {
+              "$ref":"#/definitions/FailedGetOrder"
+            }
+          },
           "401": {
             "description": "No token!",
             "schema": {
@@ -866,7 +961,7 @@
           }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description":"Product added!",
             "schema": {
               "$ref":"#/definitions/AddedProduct"
@@ -878,7 +973,37 @@
               "$ref":"#/definitions/BadRequestAddProduct"
             }
           },
+          "404":{
+            "description":"Order not found!",
+            "schema":{
+              "$ref":"#/definitions/NoOrder"
+            }
+          },
+          "x-404":{
+            "description":"Product not found!",
+            "schema":{
+              "$ref":"#/definitions/NoProduct"
+            }
+          },
+          "x-403":{
+            "description":"This is not your order!",
+            "schema":{
+              "$ref":"#/definitions/NotOrderOwner"
+            }
+          },
           "422": {
+            "description":"Out of stock!",
+            "schema":{
+              "$ref":"#/definitions/OutOfStock"
+            }
+          },
+          "x-422":{
+            "description":"Can't add duplicate product!",
+            "schema":{
+              "$ref":"#/definitions/NoDupe"
+            }
+          },
+          "423":{
             "description":"Unexpected error! Failed to add product!",
             "schema": {
               "$ref":"#/definitions/FailedAddProduct"
@@ -892,7 +1017,7 @@
         ]
       }
     },
-    "/order/detail-product/{id}": {
+    "/order/order-detail/{id}": {
       "get": {
         "tags":[
           "Order Operation"
@@ -985,6 +1110,30 @@
               "$ref":"#/definitions/BadRequestUpdateDetail"
             }
           },
+          "x-403":{
+            "description":"This is not your order!",
+            "schema":{
+              "$ref":"#/definitions/NotOrderOwner"
+            }
+          },
+          "401": {
+            "description": "No token!",
+            "schema": {
+              "$ref":"#/definitions/NoToken"
+            }
+          },
+          "403": {
+            "description": "Invalid token!",
+            "schema": {
+              "$ref":"#/definitions/InvalidToken"
+            }
+          },
+          "x-422":{
+            "description":"Out of stock",
+            "schema":{
+              "$ref":"#/definitions/OutOfStock"
+            }
+          },
           "422":{
             "description":"Unexpected error! Failed to update detail!",
             "schema":{
@@ -992,9 +1141,76 @@
             }
           },
           "404":{
-            "description":"Order detail not found!",
+            "description":"Detail not found!",
             "schema":{
               "$ref":"#/definitions/DetailNotFound"
+            }
+          }
+        },
+        "security": [
+          {
+            "Authorization": []
+          }
+        ]
+      }
+    },
+    "/order/checkout/{id}": {
+      "delete": {
+        "tags":[
+          "Order Operation"
+        ],
+        "summary":"Confirm Order",
+        "description":"Confirm order and payment",
+        "consumes":[
+          "application/json"
+        ],
+        "produces":[
+          "application/json"
+        ],
+        "parameters":[
+          {
+            "in":"path",
+            "name":"id",
+            "description":"Insert order id here!",
+            "required":true,
+            "type":"string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description":"Thank you!",
+            "schema":{
+              "$ref":"#/definitions/ThankYou"
+            }
+          },
+          "400":{
+            "description":"Your cart is empty! Please order something first",
+            "schema":{
+              "$ref":"#/definitions/EmptyCart"
+            }
+          },
+          "404":{
+            "description":"Profile not found!",
+            "schema":{
+              "$ref":"#/definitions/NoProfile"
+            }
+          },
+          "x-404": {
+            "description":"Order not found!",
+            "schema": {
+              "$ref":"#/definitions/NoOrder"
+            }
+          },
+          "x-403": {
+            "description":"This is not your order!",
+            "schema":{
+              "$ref":"#/definitions/NotOrderOwner"
+            }
+          },
+          "422": {
+            "description":"Failed to confirm order",
+            "schema":{
+              "$ref":"#/definitions/FailedConfirm"
             }
           }
         },
@@ -1032,6 +1248,12 @@
             "description":"Product removed from detail!",
             "schema":{
               "$ref":"#/definitions/RemovedOrder"
+            }
+          },
+          "x-403":{
+            "description":"This is not your order!",
+            "schema":{
+              "$ref":"#/definitions/NotOrderOwner"
             }
           },
           "404":{
@@ -1308,7 +1530,8 @@
             "name": "Toko test001",
             "role": "Merchant",
             "tags": "Technology",
-            "products": []
+            "products": [],
+            "histories": []
           }
         }
       }
@@ -1331,7 +1554,8 @@
             "name": "Toko test001",
             "role": "Buyer",
             "tags": "Technology",
-            "orders": []
+            "orders": [],
+            "histories": []
           }
         }
       }
@@ -1372,6 +1596,15 @@
         "message": {
           "type":"string",
           "example":"Profile already created!"
+        }
+      }
+    },
+    "NoProfile": {
+      "type":"object",
+      "properties":{
+        "success":{
+          "type":"boolean",
+          "example": "Profile not found!"
         }
       }
     },
@@ -1460,6 +1693,19 @@
         }
       }
     },
+    "CreateProfileFirst": {
+      "type":"object",
+      "properties": {
+        "success": {
+          "type":"boolean",
+          "example":false
+        },
+        "message": {
+          "type":"string",
+          "example":"Unexpected error! Please create profile first!"
+        }
+      }
+    },
     "ProfileNotFound": {
       "type":"object",
       "properties": {
@@ -1492,6 +1738,10 @@
         "stock": {
           "type": "number",
           "example": 25
+        },
+        "description": {
+          "type":"string",
+          "example":"SPEC i3"
         }
       }
     },
@@ -1511,6 +1761,8 @@
           "example":{
               "_id": "5d808f2296152457eaa4992c",
               "name": "LAPTOP",
+              "preview":"http://res.cloudinary.com/wlmchrstn/image/upload/v1568820109/ulilvdvfiwxrvxxzbnmt.jpg",
+              "description":"SPEC i3",
               "price": 5000,
               "stock": 25,
               "profiles": "5d808b370a701b4f5090fcb9"
@@ -1609,7 +1861,9 @@
           "type":"object",
           "example": {
                 "_id": "5d808f2296152457eaa4992c",
+                "description":"SPEC i3",
                 "name": "LAPTOP",
+                "preview":"http://res.cloudinary.com/wlmchrstn/image/upload/v1568820109/ulilvdvfiwxrvxxzbnmt.jpg",
                 "price": 5000,
                 "stock": 25
           }
@@ -1632,6 +1886,8 @@
           "example": {
             "_id": "5d808f2296152457eaa4992c",
             "name": "LAPTOP",
+            "preview":"http://res.cloudinary.com/wlmchrstn/image/upload/v1568820109/ulilvdvfiwxrvxxzbnmt.jpg",
+            "description":"SPEC i3",
             "price": 5000,
             "stock": 25
           }
@@ -1663,6 +1919,10 @@
           "type": "string",
           "example": "PC"
         },
+        "description":{
+          "type":"string",
+          "example":"SPEC i3"
+        },
         "price": {
           "type": "number",
           "example": 4000
@@ -1689,6 +1949,8 @@
           "example": {
             "_id": "5d808f2296152457eaa4992c",
             "name": "PC",
+            "preview":"http://res.cloudinary.com/wlmchrstn/image/upload/v1568820109/ulilvdvfiwxrvxxzbnmt.jpg",
+            "description":"SPEC i3",
             "price": 4000,
             "stock": 20,
             "profiles": "5d808b370a701b4f5q239221w"
@@ -1848,6 +2110,54 @@
         }
       }
     },
+    "NotOrderOwner": {
+      "type":"object",
+      "properties": {
+        "success": {
+          "type":"boolean",
+          "example":false
+        },
+        "message": {
+          "type":"string",
+          "example":"This is not your order!"
+        }
+      }
+    },
+    "GetOrder": {
+      "type":"object",
+      "properties": {
+        "success": {
+          "type":"boolean",
+          "example":true
+        },
+        "message": {
+          "type":"string",
+          "example":"Here is the detail!"
+        },
+        "result":{
+          "type":"object",
+          "example":{
+            "_id": "id",
+            "isDone": false,
+            "total": 0,
+            "details": "details id"
+          }
+        }
+      }
+    },
+    "FailedGetOrder":{
+      "type":"object",
+      "properties":{
+        "success":{
+          "type":"boolean",
+          "example":false
+        },
+        "message":{
+          "type":"string",
+          "example":"Unexpected error! Failed to get order!"
+        }
+      }
+    },
     "addProduct": {
       "type":"object",
       "required":[
@@ -1879,11 +2189,10 @@
         "result": {
           "type":"object",
           "example": {
-            "_id":"5d7f249df1f14f59f99c7b44",
-            "products":"5d81a716b97f37354619cf6e",
-            "amount":3,
-            "subtotal":15000,
-            "orders":"5d80c315942240f9bd9c4ce"
+            "isDone":false,
+            "total":15000,
+            "details":"5d81a716b97f37354619cf6e",
+            "profiles":"5d80c315942240f9bd9c4ce"
           }
         }
       }
@@ -1897,7 +2206,33 @@
         },
         "message":{
           "type":"string",
-          "example":"Bad request! Failed to add product!"
+          "example":"Bad request! Amount can't be 0!"
+        }
+      }
+    },
+    "OutOfStock": {
+      "type":"object",
+      "properties": {
+        "success":{
+          "type":"boolean",
+          "example":false
+        },
+        "message":{
+          "type":"string",
+          "example":"Out of Stock!"
+        }
+      }
+    },
+    "NoDupe": {
+      "type":"object",
+      "properties": {
+        "success":{
+          "type":"boolean",
+          "example":false
+        },
+        "message":{
+          "type":"string",
+          "example":"Can't add duplicate product!!"
         }
       }
     },
@@ -2060,6 +2395,45 @@
         "message":{
           "type":"string",
           "example":"Order detail not found!"
+        }
+      }
+    },
+    "EmptyCart":{
+      "type":"object",
+      "properties":{
+        "success":{
+          "type":"boolean",
+          "example":false
+        },
+        "message":{
+          "type":"string",
+          "example":"Your cart is empty! Please order something first!"
+        }
+      }
+    },
+    "ThankYou": {
+      "type":"object",
+      "properties":{
+        "success":{
+          "type":"boolean",
+          "example":true
+        },
+        "message":{
+          "type":"string",
+          "example":"Thank you!!"
+        }
+      }
+    },
+    "FailedConfirm": {
+      "type":"object",
+      "properties":{
+        "success":{
+          "type":"boolean",
+          "example":false
+        },
+        "message":{
+          "type":"string",
+          "example":"Unexpected error! Failed to confirm order!!"
         }
       }
     }
